--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ img{
 	height: auto;
 }
 body{
-	background-image: url(night forest.jpg);
+	background-image: url(tree.jpg);
 	background-attachment: fixed;
 	background-repeat: none;
 	background-size: cover;
