--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ img{
 	height: auto;
 }
 body{
-	background-image: url(water.jpg);
+	background-image: url(sun.jpg);
 	background-attachment: fixed;
 	background-repeat: none;
 	background-size: cover;
